Collections use improvement on Product Services